Spacing fix

--- a/src/css/modules/child-pages.less
+++ b/src/css/modules/child-pages.less
@@ -4,6 +4,10 @@
 .child-pages {
 	margin: -1rem;
 
+    ul {
+        margin: 0;
+    }
+
     li {
         padding: 1rem;
 
